2009-03-17  Elliott Baron  <ebaron@redhat.com>

	* CachegrindToolPage.java (checkL2Enablement): Change visibility to protected.
	(checkD1Enablement): Likewise.
	(checkI1Enablement): Likewise.
	* CachegrindViewPart.java (getDoubleClickListener): New getter.

2009-03-16  Elliott Baron  <ebaron@redhat.com>

	* CachegrindParser.java (parse): Explicitly close file.
	* CachegrindLine.java (getModel): Return null.
	* CachegrindOutput.java (getModel): Return null.
	* ICachegrindElement.java: Added getModel to interface.
	* CachegrindLabelProvider.java: New file.
	* CachegrindViewPart.java (getViewer): Getter for TreeViewer.
	(CachegrindTreeContentProvider): Extracted.

2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Add icons to binary build.

2009-03-11  Elliott Baron  <ebaron@redhat.com>

	* CachegrindToolPage.java (createControl): Added vertical spacer.

2009-02-25  Elliott Baron  <ebaron@redhat.com>

	* CachegrindLaunchDelegate.java (handleLaunch): Renamed method.

2009-02-20  Elliott Baron  <ebaron@redhat.com>

	* CachegrindParser.java (parse): Removed Arrays.copyOf().
	* model/CachegrindOutput.java (getEvents): Replaced Arrays.copyOfRange().
	(getParent): Likewise.
	(getSummary): Likewise.

2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* CachegrindCommandConstants.java: New file.
	* CachegrindLaunchConstants.java: New file.
	* CachegrindLaunchDelegate.java: Better output directory path handling, command line 
	arguments extracted to CachegrindCommandConstants.
	* CachegrindToolPage.java: Launch config constants extracted to CachegrindLaunchConstants.

2009-01-22  Elliott Baron  <ebaron@redhat.com>

	* CachegrindViewPart: Added sorting to TreeViewer, full event names
	to tooltip, improvements to LabelProvider for C++, double-click event
	spawing editor on file, function or line.
	* ICachegrindElement: Extend Comparable<T> for sorting by first column.
	* CachegrindFile: Likewise, added getName().
	* CachegrindLine: Likewise.